# bacen-interest-rate-history

./: .flake8  README.md  pre-commit-config.yml  pyproject.toml  requirements.txt
bacen-interest-rate-history/core/: main.py
bacen-interest-rate-history/core/config/: logging_config.py  selenium_config.py
bacen-interest-rate-history/core/domain/models/: rate_history.py
bacen-interest-rate-history/core/interfaces/: i_etl_service.py  i_extract_service.py  i_load_service.py  i_transform_service.py
bacen-interest-rate-history/core/schema/: rate_history_schema.py
bacen-interest-rate-history/core/services/etl/: etl_service.py
bacen-interest-rate-history/core/services/extract/: extract_service.py
bacen-interest-rate-history/core/services/load/: load_service.py
bacen-interest-rate-history/core/services/transform/: transform_service.py
bacen-interest-rate-history/core/utils/: db_engine.py  log_decorator.py  pyodbc_drivers.py  web_driver.py
infra/docker/: .entrypoint.sh  docker-compose.yml
notebook/: bacen-interest-rate-history.ipynb  data_analysis.ipynb
sql/: create_table_mssql.sql  create_table_postgres.sql
